<resources>
    <string name="app_name">Sahin_mobapp</string>
    <string name="get_started">Get Started</string>
    <string name="R_Name">Full name</string>
    <string name="R_Email">Valid email</string>
    <string name="R_number">Phone number</string>
    <string name="R_password">Strong Password</string>
    <string name="R_CheckBox">By checking the box you agree to our</string>
    <string name="R_Terms">Terms and Conditions.</string>
    <string name="R_Next">Next ></string>
    <string name="R_AlreadyMem">Already a member?</string>
    <string name="R_LogInButton"> Log In</string>
    <string name="R_CreatingFreeAcc">by creating a free account.</string>
    <string name="L_WelcomeBack">Welcome Back</string>
    <string name="L_AccesYourAccount">sign in to access your account</string>
    <string name="L_EnterPassword">Enter Password</string>
    <string name="L_EnterMail">Enter mail</string>
    <string name="L_RememberMe">Remember me</string>
    <string name="L_ForgetPassword">Forget password?</string>
    <string name="L_NewMember">New member?</string>
    <string name="L_registerNow"> Register now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>